# bazel-grpc-gateway

./: .bazelrc  .gitignore  BUILD  README.md  WORKSPACE  bazel-bazel-grpc-gateway  repositories.bzl
protobufs/: BUILD.bazel  echo_openapiv2.swagger.json  echo_service.pb.go  echo_service.pb.gw.go  echo_service.proto  echo_service_grpc.pb.go
