load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@com_github_grpc_ecosystem_grpc_gateway_v2//protoc-gen-openapiv2:defs.bzl", "protoc_gen_openapiv2")

package(default_visibility = ["//visibility:public"])

# gazelle:build_file_name BUILD,BUILD.bazel
# gazelle:exclude echo_service.pb.go
# gazelle:exclude echo_service.pb.gw.go
# gazelle:exclude echo_service_grpc.pb.go
# gazelle:exclude unannotated_echo_service.pb.gw.go
# gazelle:exclude unannotated_echo_service_grpc.pb.go
# gazelle:exclude visibility_rule_echo_service.pb.gw.go
# gazelle:exclude visibility_rule_echo_service_grpc.pb.go

#genrule(
#    name = "generated_proto",
#    srcs = ["generated_input.proto"],
#    outs = ["generated_output.proto"],
#    cmd = "cp $< $@",  # A simple copy simulates a generated proto file.
#)

proto_library(
    name = "protobufs_proto",
    srcs = [
        "echo_service.proto",
    ],
    deps = [
        "@com_github_grpc_ecosystem_grpc_gateway_v2//protoc-gen-openapiv2/options:options_proto",
        "@com_google_protobuf//:field_mask_proto",
        "@com_google_protobuf//:struct_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)

go_proto_library(
    name = "protobufs_go_proto",
    compilers = [
        "//:go_apiv2",
        "//:go_grpc",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//protoc-gen-grpc-gateway:go_gen_grpc_gateway",
    ],
    importpath = "github.com/xushaoxiao/bazel-grpc-gateway/protobufs",
    proto = ":protobufs_proto",
    deps = [
        "@com_github_grpc_ecosystem_grpc_gateway_v2//protoc-gen-openapiv2/options:options_go_proto",
        "@go_googleapis//google/api:annotations_go_proto",
    ],
)

go_library(
    name = "protobufs",
    embed = [":protobufs_go_proto"],
    importpath = "github.com/xushaoxiao/bazel-grpc-gateway/protobufs",
)

protoc_gen_openapiv2(
    name = "examplepb_protoc_gen_openapiv2",
    proto = ":protobufs_proto",
)

protoc_gen_openapiv2(
    name = "echo_openapiv2",
    proto = ":protobufs_proto",
    single_output = True,  # Outputs a single swagger.json file.
)

alias(
    name = "go_default_library",
    actual = ":protobufs",
    visibility = ["//visibility:public"],
)
